<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITCS</string>
    <string name="action_settings">Settings</string>
    <string name="Pagrindinis_1">Control</string>
    <string name="Pagrindinis_2">Monitoring</string>
    <string name="title_activity_stebejimo_langas">Monitoring</string>
    <string name="title_activity_control__train">Train Control</string>
    <string name="title_activity_control__switch">Switches Control</string>
    <string name="setip">Set IP address</string>
    <string name="Home">Home</string>
    <string name="RED">RED</string>
    <string name="BACK">BACK</string>
    <string name="BLUE">BLUE</string>
    <string name="off">OFF</string>
    <string name="Current_speed">Current speed</string>
    <string name="GO">GO</string>
    <string name="GREEN">GREEN</string>
    <string name="STOP">STOP</string>
    <string name="Switches">Switches</string>
    <string name="toggle">toggle</string>

</resources>