<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Control_Train" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_switches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Switches" />

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:alignmentMode="alignMargins"
           android:columnCount="2"
           android:columnOrderPreserved="true"
           android:rowCount="3"
           android:rowOrderPreserved="true"
           android:useDefaultMargins="true" >

           <RadioGroup
               android:id="@+id/control_Group"
               android:layout_width="130dp"
               android:layout_height="164dp"
               android:layout_column="0"
               android:layout_row="0"
               android:layout_rowSpan="3"
               android:gravity="left" >

               <RadioButton
                   android:id="@+id/control_Red"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/RED"
                   android:textColor="#FFF"
                   android:textSize="20sp" />

               <RadioButton
                   android:id="@+id/control_Blue"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/BLUE"
                   android:textColor="#FFF"
                   android:textSize="20sp" />

               <RadioButton
                   android:id="@+id/control_Green"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/GREEN"
                   android:textColor="#FFF"
                   android:textSize="20sp" />
           </RadioGroup>

           <TextView
               android:id="@+id/element_RedStatus"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_column="1"
               android:layout_row="0"
               android:gravity="center_vertical"
               android:text="@string/off"
               android:textColor="#FF6B60"
               android:textSize="22sp" />

           <TextView
               android:id="@+id/element_BlueStatus"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_column="1"
               android:layout_row="1"
               android:gravity="center_vertical"
               android:text="@string/off"
               android:textColor="#FF6B60"
               android:textSize="22sp" />

           <TextView
               android:id="@+id/element_GreenStatus"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_column="1"
               android:layout_row="2"
               android:gravity="center_vertical"
               android:text="@string/off"
               android:textColor="#FF6B60"
               android:textSize="22sp" />

       </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
		style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/control_backward"
            style="?android:attr/buttonBarButtonStyle"           
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/BACK" />

        <Button
            android:id="@+id/control_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/STOP" />

        <Button
            android:id="@+id/control_forward"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/GO" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seek_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200" />

        <TextView
            android:id="@+id/text_DisplaySpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Current_speed"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>